--- a/emitter/src/App.css
+++ b/emitter/src/App.css
@@ -21,7 +21,10 @@
 .App-intro {
   font-size: large;
 }
-
+h1{
+  font-size: 24px;
+  color: red
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
